<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RadioGroup
        android:id="@+id/rbDificultMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/radioGroup_margin_top"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbEasy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/difficult_easy" />

        <RadioButton
            android:id="@+id/rbMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/radioButton_margin"
            android:text="@string/difficult_medium" />

        <RadioButton
            android:id="@+id/rbHard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/radioButton_margin"
            android:text="@string/difficult_hard" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewDown1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ivGallery"
        android:layout_centerHorizontal="true"
        android:text=" "
        android:textSize="@dimen/text_size" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rbDificultMode"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/image_leftRight_margin"
        android:layout_marginRight="@dimen/image_leftRight_margin"
        android:layout_marginTop="@dimen/scrollView_margin_top" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/ivPreview_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/animal_1_preview" />

            <ImageView
                android:id="@+id/ivPreview_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/image_between_margin"
                android:scaleType="centerCrop"
                android:src="@drawable/animal_2_preview" />

            <ImageView
                android:id="@+id/ivPreview_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/image_between_margin"
                android:scaleType="centerCrop"
                android:src="@drawable/nature_1_preview" />

            <ImageView
                android:id="@+id/ivPreview_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/image_between_margin"
                android:scaleType="centerCrop"
                android:src="@drawable/nature_2_preview" />

            <ImageView
                android:id="@+id/ivPreview_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/image_between_margin"
                android:scaleType="centerCrop"
                android:src="@drawable/nature_3_preview" />
        </LinearLayout>
    </HorizontalScrollView>

    <ImageView
        android:id="@+id/ivGallery"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/gallery_margin_bottom"
        android:alpha="1"
        android:scaleType="fitXY"
        android:src="@drawable/gallery" />

</RelativeLayout>